[gd_scene load_steps=10 format=3 uid="uid://dlop25h5uj1ts"]

[ext_resource type="Script" path="res://entity/tower/basic_tower/basic_bullet.gd" id="1_pwfdi"]
[ext_resource type="Script" path="res://manager/area_box/hurt_box/hurt_area.gd" id="2_biquo"]
[ext_resource type="Texture2D" uid="uid://dl5o8hrhw6yy5" path="res://assets/tower_defense/PNG/Default size/towerDefense_tile251.png" id="3_1yvep"]
[ext_resource type="PackedScene" uid="uid://cc2so62x8uiex" path="res://component/ghost/ghost_spawner.tscn" id="4_lfvnc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_34u0n"]
radius = 7.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_as288"]
radius = 6.0

[sub_resource type="Animation" id="Animation_h2arj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TowerDefenseTile251:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hfe54"]
resource_name = "hit!"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TowerDefenseTile251:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pmln0"]
_data = {
"RESET": SubResource("Animation_h2arj"),
"hit!": SubResource("Animation_hfe54")
}

[node name="BasicBullet" type="CharacterBody2D"]
script = ExtResource("1_pwfdi")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_biquo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_34u0n")

[node name="TowerDefenseTile251" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("3_1yvep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_as288")
disabled = true

[node name="GhostSpawner" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("4_lfvnc")]
sprite = NodePath("../TowerDefenseTile251")
color = Color(1, 1, 1, 0.72549)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pmln0")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
